--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -7,6 +7,11 @@
 		<div class="screen__content">
       	<form  class="login" method="post" action="{% url 'login'  %}">
         {% csrf_token %}
+		{% if error_message %}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert" style="margin-top: 4%;"> {{error_message}}
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+            </div>
+            {% endif %}
 				<div class="login__field">
 					<i class="login__icon fas fa-user"></i>
 					{{form.email}}
