--- a/templates/css/base_style.css
+++ b/templates/css/base_style.css
@@ -273,3 +273,13 @@ body {
 .social-login__icon:hover {
 	transform: scale(1.5);	
 }
+.button-icon {
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+  }
