--- a/account/templates/account/confirm_message.html
+++ b/account/templates/account/confirm_message.html
@@ -5,13 +5,12 @@
   <br>
   <h3>Please user the link below to verify your account</h3>
   <br>                                          
-    <p>{{code}}</p>
     <table role="presentation" cellspacing="0" cellpadding="0" align="center">
       <tbody>
           <tr style="padding:0;margin:0;font-size:0;line-height:0"><td style="border-top:4px solid #ffffff;border-top-left-radius:4px;border-top-right-radius:4px;display:inline-block;text-align:center"></td></tr>
             <tr>
               <td class="m_5614693342756603034subheadline m_5614693342756603034btn_mod2_mobile2" style="background-color:#1a73e8;border:1px solid #1a73e8;border-radius:4px;color:#ffffff;display:inline-block;font-size:16px;line-height:25px;text-decoration:none;padding:7px 24px 7px 24px;font-weight:500;text-align:center;word-break:normal;direction:ltr">
-                Activate your account
+                {{code}}
               </td>
             </tr>
           <tr style="padding:0;margin:0;font-size:0;line-height:0"><td style="border-top:3px solid #ffffff;display:inline-block;border-bottom-left-radius:4px;border-bottom-right-radius:4px;text-align:center"></td></tr>
